refactor - import and export are now symmetrical